# YoutubeAPICollector

./: .gitignore  README.md  main.py  main.sh  pyproject.toml
config/: __init__.py
src/: Fetch.py  __init__.py  create_table.txt  utils.py
