[tool.poetry]
name = "realtime-streaming-project-20241015"
version = "0.1.0"
description = ""
authors = ["jaydenhyunjinlee0811 <jaydenhyunjinlee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
